# NeSST

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  python-publish.yml
NeSST/: Constants.py  NeSST.py  __init__.py  collisions.py  core.py  cross_sections.py  fitting.py  spectral_model.py
NeSST/src/: cross_sections.py  table_build.py
data/: TT_spec_temprange.txt
docs/: api.rst  conf.py  example_notebook.rst  guide.rst  index.rst  installation.rst  requirements.txt
example/: NeSST Guide.ipynb
src/: Constants.py  NeSST.py  spectral_model.py  table_build.py
src/NeSST/: __init__.py  charged_particles.py  collisions.py  constants.py  core.py  cross_sections.py  dress_interface.py  endf_interface.py  fitting.py  spectral_model.py  stopping_power.py  time_of_flight.py  utils.py
src/NeSST/data/: Be9.json  C12.json  H1.json  H2.json  H3.json  TT_xsec_ENDF.json  VerbinskiLproton.csv
src/NeSST/data/ENDF/: n-001_H_002.cendl  n-001_H_002.endf  n-001_H_003.brond  n-001_H_003.endf  n-006_C_012.endf
src/NeSST/data/TT/: BruneFit16_36keV.txt  Eriksson_45keV.txt  GatuJohnson_16keV.txt  GatuJohnson_36keV.txt  GatuJohnson_50keV.txt
tests/: test_TT.py  test_core.py  test_dress.py  test_endf.py  test_time_of_flight.py  test_utils.py
tools/: TT_Seff_fit.py  table_build.py
