[metadata]
name = aidancrilly
version = 0.0.1
description = Neutron Scattered Spectra Tool
long_description = file: README.md
author = Aidan Crilly
author_email = ac116@ic.ac.uk
url = https://github.com/aidancrilly/NeSST
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research