[metadata]
name = NeSST
version = 0.0.3
description = Neutron Scattered Spectra Tool
long_description = file: README.md
author = Aidan Crilly
author_email = ac116@ic.ac.uk
url = https://github.com/aidancrilly/NeSST
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >=3.0
install_requires = 
    numpy
    scipy

[options.extras_require]
test =
    pytest
    jupyter
    matplotlib

[options.package_data]
* = data/*.dat, data/*.txt